--- a/package.json
+++ b/package.json
@@ -33,5 +33,11 @@
   },
   "devDependencies": {
     "@types/react-vertical-timeline-component": "^3.3.6"
+  },
+  "overrides": {
+    "next": {
+      "react": "^19.0.0-rc-a960b92c-20240819",
+      "react-dom": "^19.0.0-rc-a960b92c-20240819"
+    }
   }
 }
